Fix contrast voor text op donker thema

--- a/assets/scss/module/_datatable.scss
+++ b/assets/scss/module/_datatable.scss
@@ -56,8 +56,14 @@ button, a, div {
 .dataTable {
 	width: 100% !important;
 
-	a {
-		color: #000;
+	.document {
+		&.odd a {
+			color: #fff;
+		}
+
+		&.even a {
+			color: #000;
+		}
 	}
 
 	tbody {
